lab1_zad2_step1

--- a/lab1/zad2/styles/index.css
+++ b/lab1/zad2/styles/index.css
@@ -3,26 +3,24 @@
 }
 
 #logo {
-
+	height: 200px;
 }
 
 #menu-wrapper {
-
 }
 
-#left {
-
+#about {
+	height: 600px;
 }
 
-#content-wrapper {
-
+#portfolio {
+	height: 600px;
 }
 
-#right {
-
+#services {
+	height: 600px;
 }
 
 #footer {
-
+	height: 200px;
 }
-
