--- a/zpw/lab1/zad2/styles/index.css
+++ b/zpw/lab1/zad2/styles/index.css
@@ -36,3 +36,11 @@
 section {
 	padding-top: 4rem;
 }
+
+#section-showcase {
+	background-color: rgba(0,0,0, .3);
+}
+.container-full {
+  margin: 0 auto;
+  width: 100%;
+}
