--- a/zpw/lab1/zad2/styles/index.css
+++ b/zpw/lab1/zad2/styles/index.css
@@ -44,3 +44,20 @@ section {
   margin: 0 auto;
   width: 100%;
 }
+
+footer {
+	margin: 0 0 100px 0;
+}
+
+.staffimg {
+	width: 100%;
+	height: auto;
+	text-align: center;
+	display: block;
+}
+
+.staff-title {
+	width: 100%;
+	text-align: center;
+	display: block;
+}
