lab 5 zad 2 almost

--- a/zpw/lab4/hello-world/src/app/hello.component.html
+++ b/zpw/lab4/hello-world/src/app/hello.component.html
@@ -13,6 +13,14 @@
       <li> {{ imie.toUpperCase() }} </li>
       <li>{{ url }}</li>
     </ul>
+    <h3>zad 5 method 1</h3>
+    <ul>
+      <li *ngFor="let item of tab1">{{ item }}</li>
+    </ul>
+    <h3>zad 5 method 2</h3>
+    <ul>
+      <li *ngFor="let item of tab2">{{ item }}</li>
+    </ul>
 
     <ul>
     </ul>
