--- a/zpw/lab5/shop-app/src/app/products/products.component.html
+++ b/zpw/lab5/shop-app/src/app/products/products.component.html
@@ -9,5 +9,8 @@
           *ngFor="let p of products">
         </app-single-product>
     </div>
+    <app-new-product
+    class="row"
+    (add)="addEvent($event)"></app-new-product>
   </div>
 </div>
