--- a/android/picassoapp/app/src/main/res/layout/activity_main.xml
+++ b/android/picassoapp/app/src/main/res/layout/activity_main.xml
@@ -11,36 +11,21 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="80dp"
-        android:text="image from internet"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="50dp"
+        android:text="image:"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="0dp" />
 
     <ImageView
-        android:id="@+id/img1"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:id="@+id/img"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_marginLeft="164dp"
         android:layout_marginTop="12dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="?attr/actionModeBackground" />
 
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="164dp"
-        android:text="image from device" />
-
-    <ImageView
-        android:id="@+id/img2"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginLeft="164dp"
-        android:layout_marginTop="128dp" />
 
 </FrameLayout>
