--- a/zpw/lab5/shop-app/src/app/products/products.component.scss
+++ b/zpw/lab5/shop-app/src/app/products/products.component.scss
@@ -1,3 +1,5 @@
 .product-item {
-    border: 1px solid #000;
+    margin: 7px 10px 7px 0;
+    background-color: rgba(0, 0, 0, .1);
+    border-radius: 10px;
 }
