--- a/zpw/lab5/shop-app/src/app/single-product/single-product.component.scss
+++ b/zpw/lab5/shop-app/src/app/single-product/single-product.component.scss
@@ -2,3 +2,14 @@
     width: 100%;
     height: auto;
 }
+
+.price {
+    background-color: aqua;
+    font-weight: 900;
+    display: inline-block;
+    padding: 5px;
+    width: 150px;
+    border-radius: 5px;
+    text-align: center;
+    margin: 5px 0;
+}
