--- a/zpw/lab5/shop-app/src/app/checkout/checkout.component.scss
+++ b/zpw/lab5/shop-app/src/app/checkout/checkout.component.scss
@@ -2,9 +2,5 @@
     margin: 7px 10px 7px 0;
     background-color: rgba(0, 0, 0, .1);
     border-radius: 10px;
-}
-
-.incdecbtn {
-    width: 30px;
-    padding: 0;
+    padding: 12px 0;
 }
