--- a/zpw/lab5/shop-app/src/app/login-component/login-component.component.html
+++ b/zpw/lab5/shop-app/src/app/login-component/login-component.component.html
@@ -21,4 +21,9 @@
   <div class="col-6">
     <input type="button" value="login!" (click)="login()" />
   </div>
+  <div class="col-12">
+    <a routerLink="/register" routerLinkActive="active">
+      <input type="button" value="register" />
+    </a>
+  </div>
 </div>
