--- a/zpw/lab5/shop-app/src/app/products/products.component.html
+++ b/zpw/lab5/shop-app/src/app/products/products.component.html
@@ -22,6 +22,28 @@
           <div class="col-12">
             <strong>Filter by categories</strong>
           </div>
+          <div class="col-12">
+            <div class="row">
+              <div class="col-12">
+                  <strong>Sort by</strong>
+              </div>
+              <div class="col-12">
+                  <!--<input type="button" value="name" (click)="updateSort('name')" />-->
+                  <select>
+                    <option (click)="changeSort('by', 'name')">name</option>
+                    <option (click)="changeSort('by', 'price')">price</option>
+                  </select>
+              </div>
+              <div class="col-12">
+                  <!--<input type="button" value="price" (click)="updateSort('price')" />-->
+                  <select>
+                    <option (click)="changeSort('method', 'asc')">asc</option>
+                    <option (click)="changeSort('method', 'desc')">desc</option>
+                  </select>
+              </div>
+            </div>
+            
+          </div>
           <div class="col-12 cat-item"
               [ngClass]="showFilter(pc.key) ? 'cat-item-selected' : 'cat-item-unselected'"
               *ngFor="let pc of productService.categories | keyvalue" 
@@ -41,12 +63,25 @@
             *ngFor="let p of products">
           </app-single-product>-->
           <div class="row">
-            <app-single-product 
-              (add)="addEvent($event)"
-              class="col-12 product-item" 
-              [product]="p" 
-              *ngFor="let p of products">
-            </app-single-product>
+            <div class="col-12">
+              <div class="row">
+                  <app-single-product 
+                    (add)="addEvent($event)"
+                    class="col-12 product-item" 
+                    [product]="p" 
+                    *ngFor="let p of showProducts">
+                  </app-single-product>
+                </div>
+            </div>
+            <div class="col-3">
+              <input class="pagination-btn" type="button" value="&lt;" (click)="decPage()" />
+            </div>
+            <div id="page" class="col-6">
+              page: {{ pagination.site }} / {{ pagination.numSites }}
+            </div>
+            <div class="col-3">
+                <input class="pagination-btn" type="button" value="&gt;" (click)="incPage()" />
+            </div>
           </div>
       </div>
 
