--- a/zpw/lab5/shop-app/src/app/products/products.component.scss
+++ b/zpw/lab5/shop-app/src/app/products/products.component.scss
@@ -24,3 +24,16 @@
 .cat-item-selected {
     border: rgba(0, 0, 0, 1) 2px solid;
 }
+
+#page {
+    border: 1px solid #000;
+    padding: 5px;
+    font-weight: 600;
+    text-align: center;
+}
+
+.pagination-btn {
+    width: 100%;
+    text-align: center;
+    height: 100%;
+}
