--- a/zpw/lab5/shop-app/src/app/register-component/register-component.component.html
+++ b/zpw/lab5/shop-app/src/app/register-component/register-component.component.html
@@ -3,8 +3,8 @@
     <h1>Register</h1>
   </div>
   <div class="col-3">
-    <a routerLink="/register" routerLinkActive="active">
-      <input type="button" value="register" />
+    <a routerLink="/login" routerLinkActive="active">
+      <input type="button" value="login" />
     </a>
   </div>
   <div class="col-6">
@@ -18,5 +18,8 @@
   </div>
   <div class="col-6">
     <input type="password" />
+  </div>
+  <div class="col-6">
+    <input type="button" value="register" (click)="register()" />
   </div>
 </div>
