introduced admin panel

--- a/zpw/lab5/shop-app/src/app/login-component/login-component.component.html
+++ b/zpw/lab5/shop-app/src/app/login-component/login-component.component.html
@@ -22,8 +22,8 @@
     <input type="button" value="login!" (click)="login()" />
   </div>
   <div class="col-12">
-    <a routerLink="/register" routerLinkActive="active">
-      <input type="button" value="register" />
+    <a routerLink="/dashboard/products" routerLinkActive="active">
+      <input type="button" value="dashboard" />
     </a>
   </div>
 </div>
