--- a/zpw/lab5/shop-app/src/app/admin-panel-component/admin-panel-component.component.html
+++ b/zpw/lab5/shop-app/src/app/admin-panel-component/admin-panel-component.component.html
@@ -12,7 +12,9 @@
     </a>
   </div>
   <div class="col-6">
-    <a routerLink="/admin/panel/products" routerLinkActive="active">
+    <a routerLink="/admin/panel/products"
+        [ngClass]="authService.isAdmin(username) ? '' : 'hidden'"
+        routerLinkActive="active">
       <input type="button" value="products" />
     </a>
   </div>
