--- a/zpw/lab5/shop-app/src/app/products/products.component.html
+++ b/zpw/lab5/shop-app/src/app/products/products.component.html
@@ -20,9 +20,6 @@
       <div class="col-3">
         <div class="row">
           <div class="col-12">
-            <strong>Filter by categories</strong>
-          </div>
-          <div class="col-12">
             <div class="row">
               <div class="col-12">
                   <strong>Sort by</strong>
@@ -40,6 +37,11 @@
                     <option (click)="changeSort('method', 'asc')">asc</option>
                     <option (click)="changeSort('method', 'desc')">desc</option>
                   </select>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-12">
+                <strong>Filter by categories</strong>
               </div>
             </div>
             
