ready to deploy

--- a/zpw/lab5/shop-app/src/app/login-component/login-component.component.html
+++ b/zpw/lab5/shop-app/src/app/login-component/login-component.component.html
@@ -3,7 +3,12 @@
     <span class="label">email</span>
   </div>
   <div class="col-6">
-    <input #emailfield (keyup)="updateData('email', emailfield.value)" value="karolbisztyga@gmail.com" />
+    <input #emailfield (keyup)="updateData('email', emailfield.value)"  />
+    <!--value="karolbisztyga@gmail.com" />-->
+    <!--
+      karolbisztyga@gmail.com   asd123
+      travisspears0@gmail.com   asdasd
+    -->
   </div>
   
   <div class="col-6">
